# hike-club-api

./: .gitignore  Cargo.toml  openapi.yaml  package-lock.json  package.json  requirements.md  wrangler.toml
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
location_based/: blackwell-forest-preserve.json  cantigny-park.json  danada-equestrian-center.json  greene-valley-forest-preserve.json  herrick-lake-forest-preserve.json  lincoln-marsh-natural-area.json  lyman-woods-nature-center.json  mallard-lake-forest-preserve.json  mcdowell-grove-forest-preserve.json  oakhurst-forest-preserve.json  springbrook-prairie-preserve.json  st-james-farm-forest-preserve.json  west-dupage-woods-forest-preserve.json  wheaton-prairie-path-trailhead.json
resources/: hike-location-mapping.json
scripts/: smoke-test.sh  upload-hike.sh
scripts/fixtures/: smoke-test.json
src/: auth.rs  handler.rs  lib.rs  models.rs  r2.rs  r2_adapter.rs  version.rs  weather.rs  weather_adapter.rs
tests/: contract.rs
